@@ -1,3 +1,7 @@
+2010-11-24  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* win/tkWinDialog.c  [Bug #3071836]: Crash/Tcl_Panic on WinXP saving file to C:\
+
 2010-11-19  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* generic/tkCanv*.c:        Revise Tcl_Panic() calls ending with a newline
